[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "adtui"
version = "2.4.0"
description = "Active Directory Terminal User Interface"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Brz", email = "brz@brznet.fr"}
]
keywords = ["active-directory", "ldap", "tui", "terminal", "ad-management"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: System Administrators",
    "Topic :: System :: Systems Administration :: Authentication/Directory",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Environment :: Console",
]
dependencies = [
    "ldap3>=2.9.1",
    "textual>=0.40.0",
    "prompt-toolkit>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "mypy>=1.0",
    "pylint>=2.15",
    "build>=0.10.0",
    "twine>=4.0.0",
    "pyinstaller>=5.0.0",
]
serve = [
    "textual-dev>=1.0.0",
]

[project.urls]
Homepage = "https://git.brznet.fr/brz/adtui"
Repository = "https://git.brznet.fr/brz/adtui"
"Bug Tracker" = "https://git.brznet.fr/brz/adtui/issues"

[project.scripts]
adtui = "adtui:main"
adtui-serve = "adtui.serve:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["adtui*"]

[tool.setuptools.package-data]
adtui = ["*.tcss", "*.ini.example"]

[tool.black]
line-length = 120
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pylint.messages_control]
max-line-length = 120
